@startuml

package model{
    class Battle{
        Battle getInstance()
    }

    Battle "1" x-> "1 eventSupport" java.beans.PropertyChangeSupport
    Battle "1" --> "1 instance" Battle 
}

package view{
    class LiveBattleSimulatorGUI{
        LiveBattleSimulatorGUI getInstance()
    }

    LiveBattleSimulatorGUI "1" --> "1 instance" LiveBattleGUI 

    class ExempleView{

    }
}

package controler{
    class ExempleControler{

    }
}

LiveBattleSimulatorGUI "1" o-- "componnents 1..*" java.swing.Component
ExempleControler ..> Battle
ExempleView  --|> java.swing.Component
ExempleControler --|> java.swing.Component
ExempleView ..|>  java.beans.PropertyChangeListener

java.beans.PropertyChangeSupport "emiters 1..*" o-- "listeners 1..*" java.beans.PropertyChangeListener

@enduml